// Copyright 2016 Google Inc. All Rights Reserved.
// Author: Sebastian Schaffert <schaffert@google.com>

syntax = "proto3";

package wikidata.primarysources.model;

// A message describing user statistics for an individual user.
message UserActivity {
    // User name.
    string name = 1;

    // Number of activities for this user.
    int64 activities = 2;
}

// An activity entry for a certain date, with top approvers and rejecters.
message ActivityEntry {
    string date = 1;

    repeated UserActivity approved = 2;

    repeated UserActivity rejected = 3;
}

message ActivityLog {
    // The list of users that were active over all the timespan.
    repeated string users = 1;

    // An activty entry for each date in the timespan.
    repeated ActivityEntry entries = 2;
}